--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body class="template">
     <p class="header"><span>Unity SDK Test</span>FBSDK7.5.0</p>
+    <p class="header">This page will be automatically redirected to game page.</p>
     <script src="js/fb-core.js"></script>
   </body>
 </html>
