--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body class="template">
     <p class="header"><span>Unity SDK Test</span>FBSDK7.5.0</p>
     <p class="header">This page will be automatically redirected to game page...</p>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/fb-core.js"></script>
   </body>
 </html>
